Closed Bug 15265 Opened 25 years ago Closed 25 years ago

Regression: Click on New Msg opens a blank Compose window

Categories

(MailNews Core :: Composition, defect, P1)

Other
Linux

Tracking

(Not tracked)

VERIFIED FIXED

People

(Reporter: fenella, Assigned: rods)

Details

Linux (1999-09-30-08 M11)
Steps:
1. run /mozilla-apprunner.sh -mail
2. Click on New Msg to open a Compose window
Actual Result: Compose window pops up with a blank window. Drag it around, the
application gets blank out and hung-up
Expect result: All these should not happen.

Have not tested Win32 and Mac yet.
This is in the M11 trunk builds.  Blocker because this is part of our smoke
tests and a regression.
Summary: Regression:Click on New Msg opens a blank Compose window → [BLOCKER] Regression:Click on New Msg opens a blank Compose window
Priority: P3 → P1
P1
Phil - leaf is going to hold the tree closed for this, I think.  Leaf is
wondering who is working on this. Thanks.
Is it Linux only? If it happens on the Mac, JF ducarroz work on it. If it's
Linux only, we can tap alecf or sspitzer.
We don't have Win32 or Mac builds to try yet.
Status: NEW → ASSIGNED
I've just pull the M11 tree (I was working on M10). I would be able to debug this problem in about 2 hours.
Win_nt 4.0 (1999-0930-12 M11)
Steps:
1. The Compose window opens up with the center area blanks out. The blank out
area aligns with the TO: input field all the right down to the bottom of the
window.
2. Type in the To: field and part of the body area.  OK.
3. Tpye in the Subject field, no working
4. Click Send, the String Id dialog comes up, click Ok. It went away.
5. Message is sent. Able to read it in the receiver's end But the subject is
empty.
Perhaps you should file a new bug for the Win32 behavior since it's different
than Linux?  JFD - what do you think?
Mac (1999-09-30-10 M11)
The Compose window has the same problem like the one on Win_nt.
When click on Send, the string Id dialog pops up. Click on OK, it does not go
away.  But the message is sent to the receiver and is readable.  But subject
field is empty because the compose window does not allow me to type any text in
the Subject field.
The string ID part is another bug.
http://bugzilla.mozilla.org/show_bug.cgi?id=14591
I think you should file a separate bug on the subject part not showing up after
receiving the message.

Let this bug track the blank compose window on Linux.
I won't be able to do anything for the linux problem until Monday, I don't have a Unix box at home! Seth, could you
take a look for me please? Thanks
Turns out Alec and Seth are unavailable.
Bug #15302 tracks the Subject problem on Mac and win32.
It might be related to rods checking last night. Rods, could you confirme?
First, I'll say I have absolutely NO luck EVER bring up the mail compose window
on NT or Linux. It frustrates me to no end that I just can't start the apprunner
up and have it work. Apparently there is some magic thing I have to do to my
environment to get it work. Dave helped get it running last time. What is the
magic incantation?

Ok, with that off my chest...

Next, I changed all the Control frames mostly just converting them over to use
the cached L&F object in the PresShell. The bigegst change I did to the
nsGFXTextControl (actually in the nsTextControlFrame) frame was change the
letters it was using to measure the text. I changed nsGfxTextControlFrame to
respect the incoming computed size.

The first thing I will try tomorrow is removing the part of my checkin where I
deal with the incoming computed size. If you diff version 3.53 & 3.54, look at
the diffs where is says "Skipping to line 931" This may be the problem. If box
layout isn't giving me the right computed size the text field not calculate it
right or at all. Or you can just back out version 3.54 in your local tree, it
should compile fine with that version. Obeying the computed size is the right
thing to do, but it may be causing us some problems. I did test it well for HTML
layout, but I'll admit I didn't test it much beyond the basic apprunner main
window for XUL.
Leaf backed out my change (version 3.54) to the nsGfxTextControlFrame and the
compose window now displays. If someone can help me get mail compose working
tomorrow on both my NT box and Linux box I will try to figure out what is
happening with layout and the computed size.  Do it only do this on Linux and it
is fine on NT?
Rods, the all mailnews team is off today. I don't think you need any mailnews prefs to just be able to bring the
compose window. Start Apprunner and then select File/New/New Message. Else ask either Akanna or sfraser from
the ender team. Thanks for your help.

One more, can I reassign the bug to you?
Sure, assign it to me.
I have checked in the old and new code with an ifdef. It is ifdef now for the
old code without the computed size.
Assignee: ducarroz → rods
Status: ASSIGNED → NEW
reassign to rods
Status: NEW → ASSIGNED
Whiteboard: fix is in my tree
My check in this morning makes it a non-blocker and the real fix is in my tree
Severity: blocker → major
Summary: [BLOCKER] Regression:Click on New Msg opens a blank Compose window → Regression: Click on New Msg opens a blank Compose window
Ok, downgrading severity until real fix is in.
Status: ASSIGNED → RESOLVED
Closed: 25 years ago
Resolution: --- → FIXED
Whiteboard: fix is in my tree
fixed
I'm not seeing this using 10-11-08m11 commercial build. Maybe fenella can
confirm.
Status: RESOLVED → VERIFIED
Linux (1999-10-11-08 M11)
Agree. This problem has been fixed.
Product: MailNews → Core
Product: Core → MailNews Core
You need to log in before you can comment on or make changes to this bug.