fixes bug #15265, changes reviewed by kmcclusk. Changes in the way it used the computed values